# safe-app-store

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  SECURITY_AUDIT.md  catalog.json  safe-app-manifest.json  skills-lock.json
apps/ask-jeles/: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  README.md  SECURITY.md  app.py  dev.ps1  dev.sh  personas.py  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py  wrangler.toml
apps/ask-jeles/askjeles/: __init__.py  browser.py  classify.py  crown.py  hero_scene.py  kb_search.py  leaf.py  learning_events.py  mcp_adapters.py  mcp_client.py  mcp_generic.py  mcp_registry.py  overlays.py  prism.py  search.py  serve.py  spell.py  trivia.py  web_search.py  willow_path.py
apps/ask-jeles/data/: hero_eggs.json  spell_aliases.json
apps/ask-jeles/functions/api/: chat.js
apps/ask-jeles/tests/: test_demo.py  test_learning_events.py  test_mcp_adapters.py  test_mcp_registry.py  test_trivia.py  test_verify.py
apps/ask-jeles/web/: index.html
apps/dating-wellbeing/: .gitignore  README.md  backfill_from_willow.py  lattice_fallback.py  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py  wellbeing_db.py
apps/dating-wellbeing/core/: analyzer.py  interventions.py  models.py  protocols.py  redflags.py  scoring.py
apps/dating-wellbeing/tests/: test_full_flow.py
apps/dating-wellbeing/ui/: streamlit_app.py
apps/dating-wellbeing/utils/: storage.py
apps/field-notes/: .gitignore  .mcp.json  README.md  app.py  dev.ps1  dev.sh  lattice_fallback.py  notes_db.py  personas.py  pyproject.toml  safe-app-manifest.json  safe_integration.py
apps/game/: .mcp.json  CODE_REVIEW.md  dev.ps1  dev.sh  engine_state.json  engine_v1_7.py  game_db.py  lattice_fallback.py  pyproject.toml  safe-app-manifest.json  safe_integration.py  streamlit_app.py
apps/law-gazelle/: .gitignore  .mcp.json  LICENSE  README.md  app.py  backfill_from_willow.py  case_store.py  client_profile.py  commit_package.py  dev.sh  document_store.py  gazelle_mcp.py  gazelle_state.py  intelligence.py  llm_client.py  personas.py  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py  tool_context.py  tui_routes.py  workflow.py
apps/law-gazelle/_archived/: gazelle_engine.py  legal_db.py  test_case_store.py
apps/law-gazelle/core/: db.py
apps/law-gazelle/docs/: law_gazelle_spec.md
apps/law-gazelle/screens/: detail.py  intelligence.py  workflow.py
apps/law-gazelle/scripts/: commit_package.py  export_schedule_response.py  scaffold_workers_comp.py
apps/law-gazelle/src/: ecf_parser.py  safe_integration.py
apps/law-gazelle/tests/: test_app_routes.py  test_case_store.py  test_commit_package.py  test_document_store.py  test_gazelle_state_workflow.py  test_intelligence.py  test_tui_routes.py  test_workflow.py
apps/nasa-archive/: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  NOTICE.md  README.md  SAFE_OS_NASA_FULL.md  SAFE_OS_NASA_PROPOSAL.md  SPEC.md  bbs_scraper.py  enrich_rallies.py  index.html  local_oral_chat.py  personas.py  photo-view.html  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py  wrangler.jsonc  wrangler.toml
apps/nasa-archive/.github/ISSUE_TEMPLATE/: historical-rally.yml  rally-submission.yml
apps/nasa-archive/archive_db/: db.py
apps/nasa-archive/artifacts/riggs-archive/: AGENT_PROFILE.md
apps/nasa-archive/data/: calendar.json  index.json
apps/nasa-archive/data/rallies/1997-05-kickback/: meta.json  photos.json
apps/nasa-archive/data/rallies/1997-08-stlouishotrod/: meta.json  photos.json
apps/nasa-archive/data/rallies/1999-03-vespa20thcenturyicon/: meta.json  photos.json
apps/nasa-archive/data/rallies/2003-01-fybo/: meta.json  (+1 more)
apps/nasa-archive/docs/: SPONSORS.md
apps/nasa-archive/downloader/: download.py  phase2_progress.json
apps/nasa-archive/pipeline/: __init__.py  pretraining.py
apps/nasa-archive/scraper/: bbs_scraper.py  build_calendar.py  build_data.py  geocode_rallies.py  map_site.py
apps/nasa-archive/site/: astro.config.mjs  package-lock.json  package.json
apps/nasa-archive/site/public/: _headers
apps/nasa-archive/supabase/: README.md
apps/nasa-archive/supabase/migrations/: 20260218000000_oral_history.sql  20260219000000_user_memory.sql
apps/nasa-archive/web/: bbs.html  calendar.html  clubs.html  contribute.html  index.html  map.html  patches.html  photo.html  rallies.html  rally.html
apps/nasa-archive/web/css/: style.css
apps/nasa-archive/web/data/: calendar.json  clubs.json  geo.json  rallies.json  search_index.json
apps/nasa-archive/web/js/: riggs.js  session.js
apps/private-ledger/: .gitignore  .mcp.json  README.md  app.py  backfill_from_willow.py  dev.ps1  dev.sh  lattice_fallback.py  ledger_db.py  personas.py  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py
apps/private-ledger/src/private_ledger/: app.py
apps/public-ledger/: .gitignore  README.md  personas.py  pyproject.toml  safe-app-manifest.json  safe_integration.py
apps/public-ledger/docs/: paperclip_pass4_results.txt
apps/public-ledger/src/app/: __init__.py  cache.py  engine.py  formatters.py  main.py  models.py
apps/source-trail/: README.md  personas.py  pyproject.toml  safe-app-manifest.json  safe_integration.py  sources_db.py
apps/source-trail/source_trail/: __init__.py  __main__.py  app.py
apps/story-timeline/: README.md  app.py  dev.ps1  dev.sh  export_lists.py  import_csv.py  intelligence.py  mcp_client.py  migrate.py  promote.py  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py  soil_protocol.py  story_protocol.py  suggestion_store.py  timeline_db.py  web.py  willow_edges.py
apps/the-binder/: README.md  app.py  personas.py  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py  wrangler.toml
apps/the-binder/functions/api/: chat.js
apps/the-binder/web/: index.html
apps/utety-chat/campus/: Cargo.toml
apps/utety-chat/campus/catalog/: catalog.json  generate_catalog.py
apps/utety-chat/campus/src/: app.rs  catalog.rs  consult.rs  lib.rs  main.rs
(+2471 files in other folders)
