[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-app-private-ledger"
version = "0.1.0"
description = "Local personal budgeting companion — fully private, no cloud sync, paired with Public Ledger."
requires-python = ">=3.10"
dependencies = [
    "textual>=0.52.0",
    "httpx>=0.27.0",
]

[project.scripts]
private-ledger = "private_ledger.app:main"

[tool.setuptools.packages.find]
where = ["src"]
