[package]
name = "utety-campus"
version = "0.1.0"
edition = "2021"
description = "UTETY archival terminal — campus console"

[lib]
name = "utety_campus"
path = "src/lib.rs"

[[bin]]
name = "campus"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
color-eyre = "0.6"
unicode-width = "0.2"
